--- a/flaskr/templates/website.html
+++ b/flaskr/templates/website.html
@@ -8,7 +8,7 @@
                 font-size: 80px;
                 color: blue;
                 text-align: left;
-                white-space: pre-wrap; /* Preserve line breaks in the poem */
+                white-space: pre-wrap;
                 margin: 50px 50px 50px 50px;
             }
             #main-poem-name {
@@ -36,7 +36,7 @@
                 text-align: center;
             }
             button {
-                background-color: #457a27; /* Green */
+                background-color: #457a27;
                 border: none;
                 color: white;
                 padding: 15px 32px;
@@ -89,7 +89,8 @@
     <body>
         <h1 id="upload-header">Upload image file(s)!</h1>
         <div id="home-layer">
-            <form id='image-upload' action="/upload" method="POST" enctype="multipart/form-data">
+            <form id='image-upload' action="/upload" method="POST" 
+            enctype="multipart/form-data">
                 <label for="files">Select file(s):</label>
                 <br>
                 <div id="choose-file">
@@ -103,7 +104,8 @@
 
             <div id="generate-layer">
                 <form action="/generate" method="POST">
-                    <button id='generate-button' onclick="displayPoem()" type="button">Generate Poem</button>
+                    <button id='generate-button' onclick="displayPoem()" 
+                    type="button">Generate Poem</button>
                 </form>
             </div>  
 
@@ -111,7 +113,8 @@
 
             <div>
                 <form action="/history" method="POST">
-                    <button id='history-button' onclick="viewOldPoems()" type="button">View old poems</button>
+                    <button id='history-button' onclick="viewOldPoems()" 
+                    type="button">View old poems</button>
                 </form>
             </div>
 
@@ -123,7 +126,8 @@
         <div id="display-generated-poem-layer" style="visibility: hidden;">
             <h2 id="main-poem-name"></h2>
             <p id="poem-text"></p>
-            <button type='button' id="speak-button" onclick="sayIt('poem-text')">Hear the poem!</button>
+            <button type='button' id="speak-button" onclick="sayIt('poem-text')">
+                Hear the poem!</button>
             <br>
             <form action="/" method="GET">
                 <button id='restart-button' type="submit">Restart</button>
@@ -136,7 +140,6 @@
 
         <script>
             function viewOldPoems(){
-                console.log("THIS IS ME TESTING")
                 event.preventDefault();
 
                 fetch('/history', {method: 'POST'})
@@ -175,8 +178,8 @@
             function displayPoem() {
                 event.preventDefault();
 
-                // Show "Generating..." text
-                document.getElementById('generate-status').textContent = "Generating...";
+                document.getElementById('generate-status').textContent 
+                = "Generating...";
     
                 fetch('/generate', {
                     method: 'POST',
@@ -184,18 +187,25 @@
                 .then(response => response.json())
                 .then(data => {
                     if (data.poem == "*NO IMAGES*") {
-                        document.getElementById('generate-status').textContent = "No images found. Upload images first before generating poem!";
+                        document.getElementById('generate-status').textContent 
+                        = "No images found. Upload images first before \
+                                                        generating poem!";
                     } else {
                         // Display the generated poem
-                        document.getElementById('main-poem-name').innerText = data.name;
-                        document.getElementById('poem-text').innerText = data.poem;
-                        document.getElementById('generate-status').textContent = ""; // Clear "Generating..."
-                        document.getElementById('display-generated-poem-layer').style.visibility = "visible"
+                        document.getElementById('main-poem-name').innerText 
+                        = data.name;
+                        document.getElementById('poem-text').innerText 
+                        = data.poem;
+                        document.getElementById('generate-status').textContent 
+                        = "";
+                        document.getElementById('display-generated-poem-layer')
+                        .style.visibility = "visible"
                     }
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    document.getElementById('generate-status').textContent = "Error generating poem.";
+                    document.getElementById('generate-status').textContent = 
+                    "Error generating poem.";
                 });
             }
         </script>
